--- a/Snapcast/src/main/AndroidManifest.xml
+++ b/Snapcast/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </activity>
 
         <receiver
-            android:name="de.badaix.snapcast.BootCompleteReceiver"
+            android:name="de.badaix.snapcast.BroadcastReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
